<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LL_top_info"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_logged_user"
            style="@style/user_info"
            android:text="Logged user:" />

        <TextView
            android:id="@+id/tv_user"
            style="@style/user_info"
            android:text="User Info" />


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="200dp"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="@+id/fragment_container"
        app:layout_constraintStart_toStartOf="@+id/fragment_container">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@color/nano_blue"
                android:text="+" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_minus"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@color/nano_blue"
                android:gravity="center"
                android:text="-" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_reservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nano_blue"

            android:text="Make reservation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_log_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Log off" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/LL_top_info">

        <Button
            android:id="@+id/btn_instruments"
            style="@style/menu_button"
            android:text="@string/instruments" />

        <Button
            android:id="@+id/btn_operations"
            style="@style/menu_button"
            android:text="@string/operations" />

        <Button
            android:id="@+id/btn_materials"
            style="@style/menu_button"
            android:text="@string/sample_materials" />

        <Button
            android:id="@+id/btn_layers"
            style="@style/menu_button"
            android:text="@string/additional_layers" />

        <Button
            android:id="@+id/btn_sizes"
            style="@style/menu_button"
            android:text="@string/sample_sizes" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/LL_top_info">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/LL_pokus"
        android:layout_width="184dp"
        android:layout_height="614dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/LL_top_info">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/reservation_payload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reservation payload"
            android:layout_marginBottom="20dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

